ref #842 handle compilation warnings